--- a/src/components/Cart/cart.module.css
+++ b/src/components/Cart/cart.module.css
@@ -17,16 +17,16 @@
     margin-top: 0;
 }
 
-.emptyCart h4 {
+.cartWrapper .emptyCart h4 {
     font-weight: 300;
     font-size: 16px;
 }
 
-.emptyCart h5 {
+.cartWrapper .emptyCart h5 {
     font-size: 18px;
 }
 
-.emptyCart {
+.cartWrapper .emptyCart {
     text-align: center;
 }
 
@@ -34,70 +34,70 @@
     margin-top: 12px;
 }
 
-.fullCart {
+.cartWrapper .fullCart {
     display: grid;
     grid-template-columns: 100px auto;
     gap: 12px;
     margin: 18px 0;
 }
 
-.fullCart img {
+.cartWrapper .fullCart img {
     max-width: 100px;
 }
 
-.fullCart .presentation {
+.cartWrapper .fullCart .presentation {
     display: flex;
     justify-content: space-between;
 }
 
-.fullCart .presentation h4 {
-    width: 15px;
+.cartWrapper .fullCart .presentation h4 {
+    width: 50px;
 }
 
-.fullCart .presentation h5 {
+.cartWrapper .fullCart .presentation h5 {
     white-space: nowrap;
 }
 
-.fullCart h4,
-.fullCart h5,
-.fullCart p {
+.cartWrapper .fullCart h4,
+.cartWrapper .fullCart h5,
+.cartWrapper .fullCart p {
     margin: 0;
     font-size: 12px;
 }
 
-.fullCart h5 {
+.cartWrapper .fullCart h5 {
     font-weight: 300;
 }
 
-.fullCart .spaceBetween {
+.cartWrapper .fullCart .spaceBetween {
     display: grid;
     align-content: space-between;
 }
 
-.fullCart .bottomProduct,
-.totalCosts {
+.cartWrapper .fullCart .bottomProduct,
+.cartWrapper .totalCosts {
     display: flex;
     justify-content: space-between;
 }
 
-.totalCosts span {
+.cartWrapper .totalCosts span {
     font-weight: 700;
     font-size: 14px;
 }
 
-.fullCart .bottomProduct select {
+.cartWrapper .fullCart .bottomProduct select {
     background-color: transparent;
     outline: none;
     border: 1px solid var(--black-colour);
     padding: 6px;
 }
 
-.fullCart .bottomProduct button {
+.cartWrapper .fullCart .bottomProduct button {
     background-color: transparent;
     border: none;
 }
 
-.fullCart .bottomProduct button,
-.fullCart .bottomProduct span {
+.cartWrapper .fullCart .bottomProduct button,
+.cartWrapper .fullCart .bottomProduct span {
     color: #9C9C9C;
 }
