Number count added.

--- a/src/components/Navigation/navigation.module.css
+++ b/src/components/Navigation/navigation.module.css
@@ -71,6 +71,23 @@ nav.wrapper {
     z-index: 9;
 }
 
+.favouritesWrapper .cartFavouritesTotal {
+    position: absolute;
+    bottom: 0;
+    right: -4px;
+    background-color: var(--primary-colour);
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 14px;
+    font-weight: 600;
+    color: var(--white-colour);
+    z-index: 9;
+}
+
 @media screen and (min-width: 700px) {
     .search_bar {
         width: auto;
