Logo fixed and assets moved.

--- a/components/VisitStore/visitstore.module.css
+++ b/components/VisitStore/visitstore.module.css
@@ -1,5 +1,5 @@
 .visitStore {
-    background-image: url("../../assets/client-image.svg");
+    background-image: url("../../public/assets/client-image.svg");
     padding: 50px;
     background-size: cover;
     background-repeat: no-repeat;
