--- a/components/Filters/filters.module.css
+++ b/components/Filters/filters.module.css
@@ -7,10 +7,10 @@
     margin-bottom: 6px;
 }
 
-label {
+/* label {
     text-transform: capitalize;
     font-size: 18px;
-}
+} */
 
 .products_filter {
     display: grid;
