--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Mr+Dafoe&family=Tangerine:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Mr+Dafoe&family=Tangerine:wght@400;700&display=swap");
 
 :root {
   --h1-size: 2em;
-  --primary-colour: #FA6121;
+  --primary-colour: #fa6121;
   --white-colour: #fff;
   --black-colour: #000;
   --background-colour-h1: rgba(70, 98, 137, 0.9);
@@ -57,7 +57,7 @@ img {
     margin: auto;
   }
 
-  body>* {
+  body > * {
     margin: 0 30px;
   }
 }
