--- a/frontend/components/Filters/filters.module.css
+++ b/frontend/components/Filters/filters.module.css
@@ -1,10 +1,11 @@
 .filters_products {
-    display: grid;
-    gap: 6px;
+  display: grid;
+  gap: 6px;
+  margin-bottom: 6px;
 }
 
-.filters_products h4 {
-    margin-bottom: 6px;
+.filters_container h4 {
+  margin-bottom: 4px;
 }
 
 /* label {
@@ -13,80 +14,80 @@
 } */
 
 .products_filter {
-    display: grid;
-    gap: 15px;
+  display: grid;
+  gap: 15px;
 }
 
 /* The custom checkbox container  */
 
 .container_checkbox {
-    display: block;
-    position: relative;
-    padding-right: 35px;
-    cursor: pointer;
-    font-size: 1.1rem;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  display: block;
+  position: relative;
+  padding-right: 35px;
+  cursor: pointer;
+  font-size: 1.1rem;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .container_checkbox input[type="checkbox"] {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
 }
 
 .container_checkbox .checkmark {
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 20px;
-    width: 20px;
-    background-color: #ffff;
-    border: 1px solid black;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 20px;
+  width: 20px;
+  background-color: #ffff;
+  border: 1px solid black;
 }
 
 .container_checkbox:hover input ~ .checkmark {
-    background-color: rgb(243, 242, 242);
+  background-color: rgb(243, 242, 242);
 }
 
 .container_checkbox input:checked ~ .checkmark {
-    background-color: var(--primary-colour);
-    border: 1px solid var(--primary-colour);
+  background-color: var(--primary-colour);
+  border: 1px solid var(--primary-colour);
 }
 
 .container_checkbox .checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
+  content: "";
+  position: absolute;
+  display: none;
 }
 
 .container_checkbox input:checked ~ .checkmark:after {
-    display: block;
+  display: block;
 }
 
 .container_checkbox .checkmark:after {
-    left: 6px;
-    top: 2px;
-    width: 5px;
-    height: 10px;
-    border: solid var(--color-h1);
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
+  left: 6px;
+  top: 2px;
+  width: 5px;
+  height: 10px;
+  border: solid var(--color-h1);
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 @media screen and (max-width: 600px) {
-    .mobile {
-        display: none;
-    }
-    .filters_container {
-        position: absolute;
-        background-color: var(--white-colour);
-        width: max-content;
-        padding: 0 10px;
-        z-index: 1000;
-    }
+  .mobile {
+    display: none;
+  }
+  .filters_container {
+    position: absolute;
+    background-color: var(--white-colour);
+    width: max-content;
+    padding: 0 10px;
+    z-index: 1000;
+  }
 }
