--- a/frontend/components/Buttons/buttons.module.css
+++ b/frontend/components/Buttons/buttons.module.css
@@ -31,6 +31,11 @@
   font-weight: 700;
 }
 
+.sectionButton a:hover {
+  color: var(--primary-colour);
+  background-color: var(--white-colour);
+}
+
 .cartButton {
   display: flex;
   align-items: center;
