--- a/frontend/styles/product.module.css
+++ b/frontend/styles/product.module.css
@@ -39,6 +39,7 @@
     padding: 6px;
     border: 1px solid black;
     color: black;
+    cursor: pointer;
 }
 
 .productDetails .sizing form select {
