--- a/frontend/styles/products.module.css
+++ b/frontend/styles/products.module.css
@@ -94,9 +94,11 @@
   position: relative;
   max-width: 300px;
   min-width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
+}
+
+.imageWrapper {
+  max-height: 340px;
+  height: 100%;
 }
 
 .image {
