--- a/frontend/components/MenuNav/menu.module.css
+++ b/frontend/components/MenuNav/menu.module.css
@@ -1,12 +1,7 @@
 body .menu {
-  position: absolute;
   overflow: scroll;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  width: 100vw;
-  height: auto;
+  width: 100%;
+  max-height: 300px;
   background-color: var(--white-colour);
   z-index: 900;
 }
