--- a/frontend/components/MenuNav/menu.module.css
+++ b/frontend/components/MenuNav/menu.module.css
@@ -1,88 +1,25 @@
-body .menu {
-  overflow: scroll;
-  width: 100%;
-  max-height: 300px;
-  background-color: var(--white-colour);
-  z-index: 900;
+.menu {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: center;
+  gap: 30px;
+}
+
+.menu ul {
+  padding: 0;
+  display: grid;
+  gap: 6px;
+  margin-top: 0;
 }
 
 .menu h4 {
-  margin-bottom: 0;
+  margin-bottom: 12px;
 }
 
-.menu_sections a {
-  color: var(--black-colour);
-}
-
-.close {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  font-size: 2rem;
-  cursor: pointer;
-  color: var(--black-colour);
-}
-
-.menu .container {
-  padding: 50px;
-  max-width: 1300px;
-  margin: auto;
-}
-
-.visitImage {
-  margin: 50px 0;
-  padding: 60px;
-}
-
-.menuBarInfo {
-  border: 1px solid var(--black-colour);
-  padding: 30px;
-  grid-template-columns: auto;
-  gap: 15px;
-}
-
-.nav_wrapper ul {
-  padding: 0;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  gap: 18px;
-  margin-top: 3px;
-}
-
-.nav_wrapper ul li {
+.menu ul li {
   list-style: none;
 }
 
-@media screen and (max-width: 699px) {
-  .menu {
-    height: 250vh;
-  }
-}
-
-@media screen and (min-width: 700px) {
-  .menu {
-    height: 150vh;
-  }
-
-  .menuBarInfo {
-    grid-template-columns: auto auto auto;
-  }
-}
-
-@media screen and (min-width: 1230px) {
-  .menuBarInfo .flexBox {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-  }
-
-  .menuBarInfo {
-    grid-template-columns: 220px 320px 500px;
-  }
-}
-
-@media screen and (min-width: 1300px) {
-  .menuBarInfo {
-    grid-template-columns: 200px 350px 520px;
-  }
+.menu ul li a {
+  color: var(--black-colour);
 }
