--- a/frontend/pages/checkout/ShippingDetails/shippingdetails.module.css
+++ b/frontend/pages/checkout/ShippingDetails/shippingdetails.module.css
@@ -2,84 +2,15 @@
     max-width: 600px;
     margin: auto;
 }
-
 .shippingDetails form {
-    max-width: 200px;
-    margin: auto;
-}
-
-.shippingDetails section label {
-    margin-bottom: 4px;
-    margin-top: 12px;
-}
-
-.shippingDetails section input {
-    padding: 6px;
-}
-
-.shippingDetails section div {
-    display: flex;
-    flex-direction: column;
-}
-
-.shippingDetails .input {
-    margin-top: 12px;
-}
-
-.shippingDetails label {
-    font-weight: bold;
-    color: var(--black-colour);
-    font-size: 14px;
-    font-family: Tahoma;
-}
-
-.shippingDetails .input>div,
-.shippingDetails .options {
-    margin-top: 12px;
-}
-
-.shippingDetails ::placeholder {
-    font-size: 10px;
-    padding-left: 2px;
-    color: #D4D4D4;
-}
-
-.shippingDetails .buttons {
     display: grid;
-    gap: 6px;
-    margin-top: 12px;
-}
-
-.shippingDetails .buttons .submitButton {
-    grid-row: 1;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    gap: 12px;
 }
 
 @media screen and (min-width: 700px) {
     .shippingDetails form {
-        max-width: 500px;
-    }
-
-    .shippingDetails form section,
-    .shippingDetails .input:not(.options) {
-        display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 0 12px;
-        align-items: baseline;
-    }
-
-    .shippingDetails .options {
-        margin-top: 12px;
-    }
-
-    .shippingDetails .input {
-        margin-top: 0;
-    }
-
-    .shippingDetails .buttons {
-        grid-template-columns: 1fr 1fr;
-    }
-
-    .shippingDetails .submitButton {
-        grid-column: 2;
     }
 }
