--- a/frontend/pages/checkout/ShoppingBag/shoppingbag.module.css
+++ b/frontend/pages/checkout/ShoppingBag/shoppingbag.module.css
@@ -103,6 +103,10 @@
     margin-bottom: 18px;
 }
 
+.main {
+    text-align: center;
+}
+
 @media screen and (min-width: 800px) {
     .shoppingBagWrapper {
         max-width: 800px;
