--- a/frontend/styles/products.module.css
+++ b/frontend/styles/products.module.css
@@ -97,12 +97,14 @@
 }
 
 .imageWrapper {
-  max-height: 340px;
-  height: 100%;
+  height: 380px;
+  width: 100%;
+  position: relative;
 }
 
 .image {
   transition: transform 0.2s;
+  object-fit: cover;
 }
 
 .image:hover {
@@ -126,14 +128,16 @@
   border: none;
 }
 
-.card_txt h2 {
+.brand {
   font-size: 16px;
   font-weight: 300;
-  margin: 6px 0;
+  margin-bottom: 4px;
+  text-transform: capitalize;
 }
 
-.card_txt h3 {
+.title {
   margin-top: 0;
+  text-transform: capitalize;
 }
 
 .price {
