--- a/frontend/styles/homepage.module.css
+++ b/frontend/styles/homepage.module.css
@@ -25,6 +25,8 @@
     max-width: 750px;
     min-height: 350px;
     object-fit: cover;
+    height: auto;
+    width: 100%;
 }
 
 /* SECOND SECTION */
