--- a/frontend/components/Navigation/navigation.module.css
+++ b/frontend/components/Navigation/navigation.module.css
@@ -66,6 +66,13 @@
     position: relative;
 }
 
+.shoppingBag .icon,
+.favouritesWrapper .icon {
+    background: none;
+    border: none;
+    font-size: 24px;
+}
+
 .right_nav svg {
     cursor: pointer;
 }
@@ -90,7 +97,7 @@
 .favouritesWrapper .cartFavouritesTotal {
     position: absolute;
     bottom: 0;
-    right: -4px;
+    right: -2px;
     background-color: var(--primary-colour);
     width: 20px;
     height: 20px;
