--- a/frontend/components/FavouritesCart/favouritescart.module.css
+++ b/frontend/components/FavouritesCart/favouritescart.module.css
@@ -1,6 +1,7 @@
 .cartFavouritesWrapper {
     padding: 30px;
-    width: 360px;
+    width: 70vw;
+    max-width: 300px;
     border: 1px solid #000;
     position: absolute;
     top: 40px;
