--- a/frontend/components/NewArrivals/newarrivals.module.css
+++ b/frontend/components/NewArrivals/newarrivals.module.css
@@ -5,10 +5,15 @@
     justify-content: center;
 }
 
-.newArrivals .articles img {
-    max-width: 300px;
-    height: auto;
-    width: 100%;
+.imageWrapper {
+    height: 300px;
+    width: 230px;
+  }
+
+.newArrivals .imageWrapper img {
+    max-width: 230px;
+    height: 100%;
+    object-fit: cover;
 }
 
 .newArrivals h2 {
