--- a/frontend/styles/about.module.css
+++ b/frontend/styles/about.module.css
@@ -1,92 +1,107 @@
 .aboutPage {
-    max-width: 1000px;
-    margin: auto;
+  max-width: 1000px;
+  margin: auto;
+}
+
+.aboutPage section:last-child h1 {
+  margin-top: 0;
+}
+
+.aboutPage,
+.aboutPage article {
+  display: grid;
+  gap: 30px;
+}
+
+.aboutPage img {
+  width: 100%;
+  height: auto;
 }
 
 .aboutPage section:first-child,
 .whyVisitUs {
-    position: relative;
+  position: relative;
 }
 
 .aboutPage section:first-child img,
 .aboutPage .whyVisitUs img {
-    max-height: 300px;
-    object-fit: cover;
+  max-height: 300px;
+  object-fit: cover;
 }
 
 .aboutPage section:first-child h1,
 .aboutPage .whyVisitUs div {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: var(--white-colour);
-    margin: 0;
-    width: max-content;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: var(--white-colour);
+  margin: 0;
+  width: 80%;
 }
 
 .aboutPage .introduction {
-    max-width: 800px;
-    margin: 50px auto;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .aboutPage .whyVisitUs h2 {
-    margin: 0;
-    margin-bottom: 12px;
+  margin: 0;
+  margin-bottom: 12px;
 }
 
 .aboutPage .whyVisitUs ul {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .aboutPage .whyVisitUs li {
-    margin-bottom: 4px;
+  margin-bottom: 4px;
 }
 
 .aboutPage .whyVisitUs div {
-    padding: 20px;
-    background: var(--background-colour-h1);
+  padding: 20px;
+  background: var(--background-colour-h1);
 }
 
 .aboutPage .storeImages {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    gap: 15px;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 15px;
 }
 
 .aboutPage .storeImages img {
-    max-width: 300px;
-    margin: auto;
+  max-width: 300px;
+  margin: auto;
 }
 
 .aboutPage .brands {
-    display: grid;
-    justify-content: center;
-    justify-items: center;
-    align-items: center;
-    gap: 30px;
-    grid-template-columns: repeat(auto-fit,
-            175px);
-    ;
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  gap: 30px;
+  grid-template-columns: repeat(auto-fit, 175px);
 }
 
 .aboutPage .brands img:nth-child(1),
 .aboutPage .brands img:nth-child(3),
 .aboutPage .brands img:nth-child(5) {
-    max-height: 60px;
+  max-height: 60px;
 }
 
 .aboutPage .brands img:nth-child(2),
 .aboutPage .brands img:nth-child(4) {
-    max-height: 100px;
+  max-height: 100px;
 }
 
 @media screen and (min-width: 700px) {
-    .aboutPage .storeImages {
-        gap: 30px;
-    }
+  .aboutPage,
+  .aboutPage article {
+    gap: 60px;
+  }
 
-    .aboutPage .brands {
-        margin: 60px auto;
-    }
+  .aboutPage section:first-child h1,
+  .aboutPage .whyVisitUs div {
+    width: max-content;
+  }
 }
