--- a/frontend/components/NewArrivals/newarrivals.module.css
+++ b/frontend/components/NewArrivals/newarrivals.module.css
@@ -29,11 +29,12 @@
 .newArrivals h2 {
     font-size: 16px;
     font-weight: 300;
-    margin: 6px 0;
+    margin: 0;
 }
 
 .newArrivals h3 {
-    margin: 0;
+    margin-top: 4px;
+    font-size: 14px;
 }
 
 .newArrivals span {
