--- a/frontend/pages/checkout/ShoppingBag/shoppingbag.module.css
+++ b/frontend/pages/checkout/ShoppingBag/shoppingbag.module.css
@@ -1,3 +1,7 @@
+.shoppingBagWrapper {
+    padding: 40px 0;
+}
+
 .finalSummary {
     max-width: 230px;
     margin: 36px auto;
@@ -9,6 +13,8 @@
     max-width: max-content;
     margin: auto;
     position: relative;
+    display: grid;
+    gap: 18px;
 }
 
 .shoppingBag h1 {
@@ -93,10 +99,15 @@
     margin-top: 12px;
 }
 
-.shoppingBag img {
+.shoppingBag .imageWrapper {
     width: 230px;
     height: 300px;
-    object-fit: contain;
+}
+
+.shoppingBag img {
+    max-width: 230px;
+    height: 100%;
+    object-fit: cover;
 }
 
 .descDetails div p:first-child {
