--- a/frontend/pages/checkout/OrderProcessed/orderprocessed.module.css
+++ b/frontend/pages/checkout/OrderProcessed/orderprocessed.module.css
@@ -38,6 +38,8 @@
 
 .shoppingArticle {
   margin-bottom: 30px;
+  display: grid;
+  gap: 18px;
 }
 
 .shoppingArticle p {
@@ -95,10 +97,6 @@
     margin-right: 18px;
   }
 
-  .shoppingArticle div {
-    width: 100%;
-  }
-
   .descDetails {
     display: flex;
     justify-content: space-between;
@@ -118,6 +116,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 100%;
   }
 
   .shoppingArticle .bagPrice {
